--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #a2a2a2;
+  background-color: #343735;
   display: flex;
   justify-content: center;
   text-align: center;
