--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 body {
     margin: 5px;
     padding: 5px;
-    background-color: #343735;
+    background-color: #cacaca;
     display: flex;
     justify-content: center;
     flex-direction: column;
