--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ body {
 img {
     height: 100%;
     max-width: 50%;
+    margin: auto;
+    display: block;
 }
 
 .banner {
@@ -41,6 +43,7 @@ input, button, textarea {
     -moz-box-shadow: none;
     box-shadow: none;
     padding: 50px;
+    text-align: center;
 }
 
 textarea {
